Résolution des problèmes d'exécution. Mise à jour du readme en conséquence.